--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h1>📚 我的共享文档</h1>
     <p>欢迎访问！以下是我分享的文档，点击即可查看。</p>
     <!-- 为每个PDF文件添加一个链接 -->
-    <a href="baehae.haml" target="_blank">📄 baehae</a>
+    <a href="baehae.html" target="_blank">📄 baehae</a>
 </body>
 </html>
