--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </style>
 </head>
 <body>
-    <h1>📚 我的共享文档</h1>
-    <p>欢迎访问！以下是我分享的文档，点击即可查看。</p>
+    <h1>📚 25号被害案件调查档案</h1>
+    <p>请点击以下链接查看调查详情。</p>
     <!-- 为每个PDF文件添加一个链接 -->
     <a href="baehae.html" target="_blank">📄 baehae</a>
 </body>
